project(ServerApp CXX)

################################################################################
# Source groups
################################################################################
set(Header_Files
    "../../Engine/sdk/inc/ltmodule.h"
    "../Shared/CommonUtilities.h"
    "../Shared/DebugNew.h"
    "../Shared/DebugNew_impl.h"
    "../Shared/MsgIDs.h"
    "../Shared/ParsedMsg.h"
    "../Shared/ProfileUtils.h"
    "../Shared/ResShared.h"
    "../Shared/ScmdConsole.h"
    "../Shared/TO2/TO2VersionMgr.h"
    "../Shared/VersionMgr.h"
    "resource.h"
    "ScmdConsoleDriver_ServerApp.h"
    "SelectConfigDlg.h"
    "ServerApp.h"
    "ServerDlg.h"
    "Splash.h"
    "StdAfx.h"
)
source_group("Header Files" FILES ${Header_Files})

set(Source_Files
    "../../Engine/sdk/inc/ltmodule.cpp"
    "../Shared/CommonUtilities.cpp"
    "../Shared/DebugNew.cpp"
    "../Shared/GameAlloc.cpp"
    "../Shared/NetDefs.cpp"
    "../Shared/ParsedMsg.cpp"
    "../Shared/ProfileUtils.cpp"
    "../Shared/ScmdConsole.cpp"
    "../Shared/TO2/TO2VersionMgr.cpp"
    "../Shared/VersionMgr.cpp"
    "ScmdConsoleDriver_ServerApp.cpp"
    "SelectConfigDlg.cpp"
    "ServerApp.cpp"
    "ServerDlg.cpp"
    "Splash.cpp"
    "StdAfx.cpp"
)
source_group("Source Files" FILES ${Source_Files})

set(ALL_FILES
    ${Header_Files}
    ${Source_Files}
)

################################################################################
# Target
################################################################################
add_executable(${PROJECT_NAME} ${ALL_FILES})

add_precompiled_header(${PROJECT_NAME} "StdAfx.h" "StdAfx.cpp")

use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
set_target_properties(${PROJECT_NAME} PROPERTIES
    VS_GLOBAL_KEYWORD "MFCProj"
)
################################################################################
# Target name
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    TARGET_NAME_DEBUG         "NOLF2Srv"
    TARGET_NAME_DEBUGMFCDLL   "NOLF2Srv"
    TARGET_NAME_FINAL         "NOLF2Srv"
    TARGET_NAME_FINALDE       "NOLF2Srv"
    TARGET_NAME_FINALES       "NOLF2Srv"
    TARGET_NAME_FINALFR       "NOLF2Srv"
    TARGET_NAME_FINALIT       "NOLF2Srv"
    TARGET_NAME_FINALMFCDLL   "NOLF2Srv"
    TARGET_NAME_RELEASE       "NOLF2Srv"
    TARGET_NAME_RELEASEMFCDLL "NOLF2Srv"
)
################################################################################
# Output directory
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_DIRECTORY_DEBUG         "${CMAKE_CURRENT_SOURCE_DIR}/../Built/Debug/ServerApp"
    OUTPUT_DIRECTORY_DEBUGMFCDLL   "${CMAKE_CURRENT_SOURCE_DIR}/../Built/Debug/ServerApp"
    OUTPUT_DIRECTORY_FINAL         "${CMAKE_CURRENT_SOURCE_DIR}/../Built/Final/ServerApp"
    OUTPUT_DIRECTORY_FINALDE       "${CMAKE_CURRENT_SOURCE_DIR}/../Built/FinalDE/ServerApp"
    OUTPUT_DIRECTORY_FINALES       "${CMAKE_CURRENT_SOURCE_DIR}/../Built/FinalES/ServerApp"
    OUTPUT_DIRECTORY_FINALFR       "${CMAKE_CURRENT_SOURCE_DIR}/../Built/FinalFR/ServerApp"
    OUTPUT_DIRECTORY_FINALIT       "${CMAKE_CURRENT_SOURCE_DIR}/../Built/FinalIT/ServerApp"
    OUTPUT_DIRECTORY_FINALMFCDLL   "${CMAKE_CURRENT_SOURCE_DIR}/../Built/Final/ServerApp"
    OUTPUT_DIRECTORY_RELEASE       "${CMAKE_CURRENT_SOURCE_DIR}/../Built/Release/ServerApp"
    OUTPUT_DIRECTORY_RELEASEMFCDLL "${CMAKE_CURRENT_SOURCE_DIR}/../Built/Release/ServerApp"
)
################################################################################
# Include directories
################################################################################
target_include_directories(${PROJECT_NAME} PUBLIC
    "$<$<CONFIG:Debug>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPORT-4.0/STLPORT_NO;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/EN;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:DebugMFCDLL>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPORT-4.0/STLPORT_NO;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/EN;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:Final>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/EN;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:FinalDE>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/DE;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:FinalES>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/ES;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:FinalFR>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/FR;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:FinalIT>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/IT;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:FinalMFCDLL>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/EN;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:Release>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/EN;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
    "$<$<CONFIG:ReleaseMFCDLL>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/.;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/STLPort-4.0/stlport;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../Engine/sdk/inc;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../Shared/Lang/EN;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/RegMgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/ButeMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/CryptMgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/stdlith"
    ">"
)

################################################################################
# Compile definitions
################################################################################
target_compile_definitions(${PROJECT_NAME} PRIVATE
    "$<$<CONFIG:Debug>:"
        "_DEBUG;"
        "WIN32;"
        "_WINDOWS;"
        "_MBCS"
    ">"
    "$<$<CONFIG:DebugMFCDLL>:"
        "_DEBUG;"
        "WIN32;"
        "_WINDOWS;"
        "_MBCS"
    ">"
    "$<$<CONFIG:Final>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_FINAL;"
        "_MBCS"
    ">"
    "$<$<CONFIG:FinalDE>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_FINAL;"
        "_MBCS"
    ">"
    "$<$<CONFIG:FinalES>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_FINAL;"
        "_MBCS"
    ">"
    "$<$<CONFIG:FinalFR>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_FINAL;"
        "_MBCS"
    ">"
    "$<$<CONFIG:FinalIT>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_FINAL;"
        "_MBCS"
    ">"
    "$<$<CONFIG:FinalMFCDLL>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_FINAL;"
        "_MBCS"
    ">"
    "$<$<CONFIG:Release>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_MBCS"
    ">"
    "$<$<CONFIG:ReleaseMFCDLL>:"
        "WIN32;"
        "NDEBUG;"
        "_WINDOWS;"
        "_MBCS"
    ">"
)

################################################################################
# Compile and link options
################################################################################
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:
            /Gm;
            /Od;
            /MDd;
            /Gy;
            /W3;
            /ZI;
            /GR
        >
        $<$<CONFIG:DebugMFCDLL>:
            /Gm;
            /Od;
            /MDd;
            /Gy;
            /W3;
            /ZI;
            /GR
        >
        $<$<CONFIG:Final>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:FinalDE>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:FinalES>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:FinalFR>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:FinalIT>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:FinalMFCDLL>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:Release>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:ReleaseMFCDLL>:
            /O2;
            /GF;
            /MD;
            /Gy;
            /W3;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
            /GR
        >
        $<$<CONFIG:Template>:
            ${DEFAULT_CXX_RUNTIME_LIBRARY};
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT}
        >
        ${DEFAULT_CXX_EXCEPTION_HANDLING}
    )
    string(CONCAT FILE_CL_OPTIONS
        "$<$<CONFIG:Debug>:"
            "/Y-"
        ">"
        "$<$<CONFIG:DebugMFCDLL>:"
            "/Y-"
        ">"
        "$<$<CONFIG:Final>:"
            "/Y-"
        ">"
        "$<$<CONFIG:FinalDE>:"
            "/Y-"
        ">"
        "$<$<CONFIG:FinalES>:"
            "/Y-"
        ">"
        "$<$<CONFIG:FinalFR>:"
            "/Y-"
        ">"
        "$<$<CONFIG:FinalIT>:"
            "/Y-"
        ">"
        "$<$<CONFIG:FinalMFCDLL>:"
            "/Y-"
        ">"
        "$<$<CONFIG:Release>:"
            "/Y-"
        ">"
        "$<$<CONFIG:ReleaseMFCDLL>:"
            "/Y-"
        ">"
    )
    source_file_compile_options(../../Engine/sdk/inc/ltmodule.cpp ${FILE_CL_OPTIONS})
    target_link_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:
            /NOLOGO;
            /DEBUG;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL
        >
        $<$<CONFIG:DebugMFCDLL>:
            /NOLOGO;
            /DEBUG;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL
        >
        $<$<CONFIG:Final>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:FinalDE>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:FinalES>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:FinalFR>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:FinalIT>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:FinalMFCDLL>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:Release>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:ReleaseMFCDLL>:
            /NOLOGO;
            /DEBUG:FULL;
            /SUBSYSTEM:WINDOWS;
            /INCREMENTAL:NO
        >
        $<$<CONFIG:Template>:
            /DEBUG:FULL
        >
    )
endif()

################################################################################
# Dependencies
################################################################################
add_dependencies(${PROJECT_NAME}
    Lib_Lith
    regmgr32
    RegMgr
    Lib_StdLith
)

# Link with other targets.
target_link_libraries(${PROJECT_NAME} PUBLIC
    Lib_Lith
    regmgr32
    RegMgr
    Lib_StdLith
)

set(ADDITIONAL_LIBRARY_DEPENDENCIES
    "$<$<CONFIG:Debug>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrmfcdll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:DebugMFCDLL>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrmfcdll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:Final>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:FinalDE>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:FinalES>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:FinalFR>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:FinalIT>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:FinalMFCDLL>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:Release>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
    "$<$<CONFIG:ReleaseMFCDLL>:"
        "server;"
        "regmgr32;"
        "regmgr;"
        "lib_lith;"
        "ButeMgrMfcDll;"
        "cryptmgrMfcDll;"
        "lib_stdlith;"
        "winmm"
    ">"
)
target_link_libraries(${PROJECT_NAME} PUBLIC "${ADDITIONAL_LIBRARY_DEPENDENCIES}")

target_link_directories(${PROJECT_NAME} PUBLIC
    "$<$<CONFIG:Debug>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/sdk/lib;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/lib_stdlith"
    ">"
    "$<$<CONFIG:DebugMFCDLL>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/sdk/lib;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/debug/lib_stdlith"
    ">"
    "$<$<CONFIG:Final>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/sdk/lib;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_stdlith"
    ">"
    "$<$<CONFIG:FinalDE>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/built/Final/Runtime/DLL_Server;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_stdlith"
    ">"
    "$<$<CONFIG:FinalES>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/built/Final/Runtime/DLL_Server;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_stdlith"
    ">"
    "$<$<CONFIG:FinalFR>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/built/Final/Runtime/DLL_Server;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_stdlith"
    ">"
    "$<$<CONFIG:FinalIT>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/built/Final/Runtime/DLL_Server;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_stdlith"
    ">"
    "$<$<CONFIG:FinalMFCDLL>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/sdk/lib;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/Final/lib_stdlith"
    ">"
    "$<$<CONFIG:Release>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/sdk/lib;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/lib_stdlith"
    ">"
    "$<$<CONFIG:ReleaseMFCDLL>:"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../engine/sdk/lib;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/regmgr;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/regmgr32;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/lib_lith;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/ButeMgrMFCDll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/cryptmgrmfcdll;"
        "${CMAKE_CURRENT_SOURCE_DIR}/../../libs/built/release/lib_stdlith"
    ">"
)

